examples/website-demos/social-messaging/src/components/MessageInput/SocialMessageInput.scss
@import '../../styles/_variables';

.input-ui {
  &-container {
    position: relative;
    display: flex;
    align-items: end;
    border-top: 1px solid $stroke;
    background: $app-canvas;
    transition: background 1s;
    box-shadow: 0px -1px 0px #dbdde1;
  }

  &-icons {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding-bottom: 8px;

    &:hover {
      cursor: pointer;
    }

    svg:hover path {
      fill: $accent-primary;
    }

    &-attach {
      display: flex;
      padding: 4px 13px 0;
    }

    &-bolt {
      display: flex;
      padding: 10px 6px;
    }

    &-emoji {
      display: flex;
      width: 100%;
      padding: 8px 0 10px;
    }
  }

  &-input {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    min-height: 40px;
    height: fit-content;
    padding: 0 8px 0 5px;
    margin: 8px;
    background: $app-bg;
    border: 1px solid $borders;
    border-radius: 20px;
    flex: none;
    flex-grow: 1;
    transition: background 1s, border-color 0.2s;

    &-emoji-picker {
      display: flex;

      &:hover {
        cursor: pointer;
      }

      svg:hover path {
        fill: $accent-primary;
      }
    }

    &.giphy {
      border: 2px solid $accent-primary;
      caret-color: $accent-primary;
    }

    &:focus-within {
      border: 2px solid $accent-primary;
      caret-color: $accent-primary;
    }
  }

  &-send {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    border-radius: 999px;
    height: 40px;
    width: 40px;
    background: $app-canvas;
    transition: background 1s;
    margin: 8px 8px 8px 0;
    color: $text-low-emphasis;
    font-size: 17px;

    svg {
      fill: $text-low-emphasis;
    }

    &.text {
      &:hover {
        cursor: pointer;
      }

      svg path:first-child {
        fill: $accent-primary;
        transition: all 0.2s;
      }

      div {
        color: $accent-primary;
      }
    }

    &:active {
      background: $accent-primary;
      transition: background 1s;
      color: $white;

      svg {
        fill: $white;
      }
    }
  }
}

.str-chat__textarea {
  width: 100%;
  display: flex;
  align-items: center;
  height: 100%;

  textarea {
    background: $app-bg !important;
    transition: background 1s;
    padding: 0 !important;
    padding-left: 11px !important;
    border: none !important;
    min-height: unset !important;
    font-size: 17px;
    border-radius: 0;
    color: $text-low-emphasis;
  }
}

.str-chat__textarea textarea:focus {
  background: $app-bg;
  transition: background 1s;
  border: none !important;
  outline: none !important;
  box-shadow: none !important;
}

.emoji-mart {
  width: 310px !important;
  background: $app-canvas;
  transition: background 1s;
  box-shadow: $shadow;
  border-color: $stroke;
  display: flex !important;
  flex-direction: column-reverse !important;

  &-category-label {
    background: $app-canvas;
    transition: background 1s;
    color: $text-high-emphasis;

    span {
      background: $app-canvas;
      transition: background 1s;
    }
  }

  &-bar {
    border-top: 2px solid $borders !important;
  }

  &-search {
    display: none;
  }
}

.rfu-dropzone {
  width: calc(100% - 111px);
}

.rfu-image {
  &-previewer {
    flex: none !important;
    margin: 8px 8px 0 3px !important;
  }

  &__image {
    margin-bottom: 0 !important;
  }

  &-upload-button {
    display: none;
  }
}

.rfu-file-previewer {
  border: none !important;
  width: 100%;
  overflow: scroll !important;

  ol {
    display: flex;
  }

  &__file {
    background: $white;
    margin-right: 8px;
    border-radius: 12px;
    border: 1px solid $borders !important;
    padding: 8px 8px 8px 0 !important;
    max-width: 280px !important;
  }
}

div.rta__autocomplete.str-chat__emojisearch {
  z-index: 999;
  background: $app-canvas !important;
  box-shadow: $shadow;
  border-radius: 8px;
}

